bootstrap-integration/src/main/kubernetes/kubernetes.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: integration-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - integration.demo.jasonmarston.co.uk
    tls:
      httpsRedirect: true
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
    - integration.demo.jasonmarston.co.uk
    tls:
      mode: MUTUAL
      credentialName: integration-demo-secrets
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: integration
  namespace: istio-system
spec:
  hosts:
  - integration.demo.jasonmarston.co.uk
  gateways:
  - integration-gateway
  http:
  - name: integration-route
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: gateway-integration.default.svc.cluster.local
        port:
          number: 80
